navbar düzenlendi post detail düzenlendi

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Muhammet Ali Kayacan</title>
     <link href="./style.css" rel="stylesheet"></link>
 </head>
@@ -29,9 +30,10 @@
             <div class="app__showcase-info">
                 <h1>Blog</h1>
                 <h3>Bu blog..</h3>
-                <p> Merhaba ben Muhammet Ali Kayacan. Her zaman kendisini geliştirmeye dayalı biri olmanın verniş olduğu istekle kendime bir web sitesi yaparak diğer 
+                <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın verniş olduğu istekle kendime bir web sitesi yaparak diğer 
                     yapmış olduğum projeleri tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
                     projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
+                    Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
                 </p>
                 <div class="app__links2">
                     <a href="#" class="app__link twitter"><img src="./assets/images/twitter.svg"/> Twitter</a>
@@ -39,7 +41,7 @@
                     <a href="#" class="app__link medium"><img src="./assets/images/medium.svg"/>Medium</a>
                 </div>
             </div>
-            <img class="app__showcase-image" src="./assets/images/showcase.svg"/>
+            <img class="app__showcase-image" src="./assets/images/coding.png"/>
         </div>
 
         <ul class="app__blog-catogories">
@@ -48,7 +50,6 @@
             <li class="item">Php</li>
             <li class="item">Laravel Projects</li>
             <li class="item">Python</li>
-            <li class="item">News</li>
         </ul>
 
         <div class="app__listwrap">
