--- a/post_detail.html
+++ b/post_detail.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammet Ali Kayacan</title>
     <link href="./style.css" rel="stylesheet"></link>
+    <link href="./post_detail.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
         <a class="app_logo" href="/">
-            <img class="app__title" src="./assets/images/app_logo.svg"/>
+            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
             <img class="purple__logo" src="./assets/images/hire_me.svg"/>
         </a>
+        <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
+        <img class="menu__acik" src="./assets/images/acik.svg" />
+
     <ul class="app__links">
         <li>PORTFOLIO</li>
         <li class="active">BLOG</li>
@@ -21,14 +25,16 @@
         <li>ABOUT</li>
         <li>CONTACT</li>
     </ul>
-    
+
     </nav>
     <div class="app__showcase">
         <div class="app__showcase-info">
-            <h1>Blog Posts</h1>
-            <h3>I think so, this is it. </h3>
-            <p>Design begins after I begin to think about how to present an experience
-                most successfully, whether a button I put in can solve a problem. The only point in design is not ui design, if the user does not have a good experience at the end of the product, the design will be considered unsuccessful in my opinion.
+            <h1>Blog</h1>
+            <h3 class="lefts">Bu blog..   </h3><div class="bosluk"><br><br></div>
+            <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın verniş olduğu istekle kendime bir web sitesi yaparak diğer 
+                    yapmış olduğum projeleri tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
+                    projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
+                    Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
             </p>
             <div class="app__links2">
                 <a href="#" class="app__link twitter"><img src="./assets/images/twitter.svg"/> Twitter</a>
@@ -36,8 +42,34 @@
                 <a href="#" class="app__link medium"><img src="./assets/images/medium.svg"/>Medium</a>
             </div>
         </div>
-        <img class="app__showcase-image" src="./assets/images/showcase.svg"/>
+        <img class="app__showcase-image" src="./assets/images/coding.png"/>
     </div>
+<main class="post_detailcontainer">
+    <img class="post__detailimage" src="./assets/images/post1.svg">
+    <h1>BLOG DETAILS H1</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+        enim vitae placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+            enim vitae placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+                enim vitae placeat?</p>
+    <h2>BLOG DETAILS H2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+        enim vitae placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+            enim vitae placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+                enim vitae placeat?</p>
+    <h3>BLOG DETAILS H3</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+        enim vitae placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+            enim vitae placeat?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore temporibus doloribus atque ex iusto eos laboriosam, voluptatibus rerum ad. Rerum cum reprehenderit ab quisquam! Quia in dignissimos adipisci voluptas quos voluptate nulla sapiente consequatur. Magni nostrum sunt recusandae reiciendis ea delectus sequi, voluptas maxime libero ipsum doloribus 
+                enim vitae placeat?</p>
+</main>
 
+<footer><strong>Footer</strong></footer>
+<script src="./app.js" ></script>
 </body>
 </html>
