--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
     <nav class="app__header">
-        <a class="app_logo" href="/">
+        <a class="app_logo" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank">
             <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
-            <!-- <img class="app__title" src="./assets/images/Kayacan.svg"/> -->
             <img class="purple__logo" src="./assets/images/hire_me.svg"/>
         </a>
+        <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
+        <img class="menu__acik" src="./assets/images/acik.svg" />
+
     <ul class="app__links">
         <li>PORTFOLIO</li>
         <li class="active">BLOG</li>
@@ -23,7 +25,7 @@
         <li>ABOUT</li>
         <li>CONTACT</li>
     </ul>
-    
+
     </nav>
     <main>
         <div class="app__showcase">
@@ -36,16 +38,16 @@
                     Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
                 </p>
                 <div class="app__links2">
-                    <a href="#" class="app__link twitter"><img src="./assets/images/twitter.svg"/> Twitter</a>
-                    <a href="#" class="app__link linkedin"><img src="./assets/images/linkedin.svg"/>Linkedin</a>
-                    <a href="#" class="app__link medium"><img src="./assets/images/medium.svg"/>Medium</a>
+                    <a class="app__link github" href="https://twitter.com/LunaticZReal" target="_blank" ><img src="./assets/images/github.svg"/> Github</a>
+                    <a class="app__link linkedin" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank" ><img src="./assets/images/linkedin.svg"/>Linkedin</a>
+                    <a class="app__link medium" href="https://www.youtube.com/channel/UCTJornpG84XZXqDStwn9UlA" target="_blank" ><img src="./assets/images/Youtube.svg"/>Youtube</a>
                 </div>
             </div>
             <img class="app__showcase-image" src="./assets/images/coding.png"/>
         </div>
 
         <ul class="app__blog-catogories">
-            <li class="item active" >All Github Projects</li>
+            <li class="item active" >All Projects</li>
             <li class="item">Html-Css</li>
             <li class="item">Php</li>
             <li class="item">Laravel Projects</li>
@@ -96,5 +98,6 @@
         </div>
     </main>
     <footer class="footer"> </footer>
+    <script src="./app.js" ></script>
 </body>
 </html>
