--- a/post_detail.html
+++ b/post_detail.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="app__header">
         <a class="app_logo" href="/">
-            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
+            <a class="app_logo" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank">
             <img class="purple__logo" src="./assets/images/hire_me.svg"/>
         </a>
         <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
