değişiklikler ve eklemeler

--- a/php.html
+++ b/php.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>Muhammet Ali Kayacan</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
@@ -21,22 +20,23 @@
         <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
-    <ul class="app__links">
-        <a href="/"></a><li>PORTFOLIO</li>
-        <a href="/"><li class="active">BLOG</li></a> 
-        <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
-        <a href="store.html"><li>STORE</li></a>
-        <a href="hakkimda.html"><li>HAKKIMDA</li></a>
-        <a href="iletisim.html"><li>İLETİŞİM</li></a>
-    </ul>
+        <ul class="app__links">
+            <a href="/"></a><li>PORTFOLIO</li>
+            <a href="/"><li class="active">BLOG</li></a> 
+            <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
+            <a href="store.html"><li>STORE</li></a>
+            <a href="hakkimda.html"><li>HAKKIMDA</li></a>
+            <a href="iletisim.html"><li>İLETİŞİM</li></a>
+        </ul>
+
     </nav>
     <main>
         <div class="app__showcase">
             <div class="app__showcase-info">
                 <h1>Blog</h1>
                 <h3>Bu blog..</h3>
-                <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın vermiş olduğu istekle kendime bir web sitesi yaparak diğer 
-                    yapmış olduğum projeleri burada tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
+                <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın verniş olduğu istekle kendime bir web sitesi yaparak diğer 
+                    yapmış olduğum projeleri tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
                     projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
                     Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
                 </p>
@@ -49,9 +49,9 @@
             <img class="app__showcase-image" src="./assets/images/coding.png"/>
         </div>
         <ul class="app__blog-catogories">
-            <a  href="index.html"> <li class="item active">All Projects</li></a>
+            <a  href="index.html"> <li class="item">All Projects</li></a>
             <a  href="htmlcss.html"> <li  class="item">Html-Css</li> </a>
-            <a  href="php.html">  <li class="item">Php</li></a>
+            <a  href="php.html">  <li class="item active">Php</li></a>
             <a  href="laravel.html"> <li class="item">Laravel</li></a>
             <a  href="python.html"> <li class="item">Python</li></a>
         </ul>
@@ -67,59 +67,8 @@
                 </p>
                 <a class="postlink" href="/post_detail.html">READ MORE</a>
             </div>
-            <div class="app_postcard">
-                <img class="postimage" src="./assets/images/ff (3).png" />
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">9
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-               <img class="postimage" src="./assets/images/ff (3).png" />           
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-                <img class="postimage" src="./assets/images/ff (3).png" />            
-                <strong class="postdate">NOV 23 2020</strong>
-                <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                <p class="postinfo">
-                    A quick guide to assisting users in the challenging steps from learning 
-                    about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                </p>
-                <a class="postlink" href="/post_detail.html">READ MORE</a>
-            </div>
-            <div class="app_postcard">
-                <img class="postimage" src="./assets/images/ff (3).png" /> 
-                 <strong class="postdate">NOV 23 2020</strong>
-                 <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                 <p class="postinfo">
-                     A quick guide to assisting users in the challenging steps from learning 
-                     about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                 </p>
-                 <a class="postlink" href="/post_detail.html">READ MORE</a>
-             </div>
-             <div class="app_postcard">
-                <img class="postimage" src="./assets/images/ff (3).png" /> 
-                 <strong class="postdate">NOV 23 2020</strong>
-                 <h3 class="posttitle">This way is wrong about UI Design.</h3>
-                 <p class="postinfo">
-                     A quick guide to assisting users in the challenging steps from learning 
-                     about your podcast on the web.  A quick guide to assisting users in the challenging steps from learning about your podcast on the web. 
-                 </p>
-                 <a class="postlink" href="/post_detail.html">READ MORE</a>
-             </div>
-        </div>
     </main>
-    
+
     <div class="footer-clean">
         <footer>
             <div class="container">
@@ -157,6 +106,6 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-    <script src="./app.js" ></script>
+<script src="./app.js" ></script>
 </body>
 </html>
