--- a/post_detail.html
+++ b/post_detail.html
@@ -5,41 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Muhammet Ali Kayacan</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="./style.css" rel="stylesheet"></link>
     <link href="./post_detail.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
-        <a class="app_logo" href="/">
-            <a class="app_logo" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank">
-            <img class="purple__logo" src="./assets/images/hire_me.svg"/>
-        </a>
+        <a class="app_logo" href="/"> 
+            <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />  </a>
+            <a class="app_logo" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
+                <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
         <img class="menu__kapali" src="./assets/images/kapalı.svg"/>
         <img class="menu__acik" src="./assets/images/acik.svg" />
 
-    <ul class="app__links">
-        <li>PORTFOLIO</li>
-        <li class="active">BLOG</li>
-        <li>CV</li>
-        <li>STORE</li>
-        <li>ABOUT</li>
-        <li>CONTACT</li>
-    </ul>
+        <ul class="app__links">
+            <a href="/"></a><li>PORTFOLIO</li>
+            <a href="/"><li class="active">BLOG</li></a> 
+            <a href="/assets/pdf/Muhammet Ali Kayacan CV.pdf" target="_blank"><li>CV</li></a>
+            <a href="store.html"><li>STORE</li></a>
+            <a href="hakkimda.html"><li>HAKKIMDA</li></a>
+            <a href="iletisim.html"><li>İLETİŞİM</li></a>
+        </ul>
 
     </nav>
     <div class="app__showcase">
         <div class="app__showcase-info">
             <h1>Blog</h1>
-            <h3 class="lefts">Bu blog..   </h3><div class="bosluk"><br><br></div>
+            <h3>Bu blog..</h3>
             <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın verniş olduğu istekle kendime bir web sitesi yaparak diğer 
-                    yapmış olduğum projeleri tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
-                    projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
-                    Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
+                yapmış olduğum projeleri tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
+                projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
+                Herhangi bir soru için mail üzerinden veya aşağıdaki kanallardan iletişim kurabilirsiniz. Gezintinizin keyfini çıkarın.
             </p>
             <div class="app__links2">
-                <a href="#" class="app__link twitter"><img src="./assets/images/twitter.svg"/> Twitter</a>
-                <a href="#" class="app__link linkedin"><img src="./assets/images/linkedin.svg"/>Linkedin</a>
-                <a href="#" class="app__link medium"><img src="./assets/images/medium.svg"/>Medium</a>
+                <a class="app__link github" href="https://github.com/Muhammet15" target="_blank" ><img src="./assets/images/github.svg"/> Github</a>
+                <a class="app__link linkedin" href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank" ><img src="./assets/images/linkedin.svg"/>Linkedin</a>
+                <a class="app__link medium" href="https://www.youtube.com/channel/UCTJornpG84XZXqDStwn9UlA" target="_blank" ><img src="./assets/images/Youtube.svg"/>Youtube</a>
             </div>
         </div>
         <img class="app__showcase-image" src="./assets/images/coding.png"/>
@@ -69,7 +71,44 @@
                 enim vitae placeat?</p>
 </main>
 
-<footer><strong>Footer</strong></footer>
+
+<div class="footer-clean">
+    <footer>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#">Web design</a></li>
+                        <li><a href="#">Development</a></li>
+                        <li><a href="#">Hosting</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>About</h3>
+                    <ul>
+                        <li><a href="#">Company</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Legacy</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Careers</h3>
+                    <ul>
+                        <li><a href="#">Job openings</a></li>
+                        <li><a href="#">Employee success</a></li>
+                        <li><a href="#">Benefits</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
+                    <p class="copyright">Company Name © 2018</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 <script src="./app.js" ></script>
 </body>
 </html>
