--- a/python.html
+++ b/python.html
@@ -33,7 +33,7 @@
         <div class="app__showcase">
             <div class="app__showcase-info">
                 <h1>Blog</h1>
-                <h3>Bu blog..</h3>
+                <h3 class="text">Bu blog..</h3>
                 <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın verniş olduğu istekle kendime bir web sitesi yaparak diğer 
                     yapmış olduğum projeleri tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
                     projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
@@ -48,7 +48,7 @@
             <img class="app__showcase-image" src="./assets/images/coding.png"/>
         </div>
         <ul class="app__blog-catogories">
-            <a  href="index.html"> <li class="item">All Projects</li></a>
+            <a  href="index.html"> <li class="item ilk">Tüm Projeler</li></a>
             <a  href="htmlcss.html"> <li  class="item">Html-Css</li> </a>
             <a  href="php.html">  <li class="item">Php</li></a>
             <a  href="laravel.html"> <li class="item">Laravel</li></a>
