--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="./style.css" rel="stylesheet"></link>
     <link href="./post_detail.css" rel="stylesheet"></link>
+    <link href="./pages.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
@@ -34,7 +35,8 @@
         <div class="app__showcase">
             <div class="app__showcase-info">
                 <h1>Blog</h1>
-                <h3>Bu blog..</h3>
+                <h3 class="text">Bu blog...</h3>
+               
                 <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın vermiş olduğu istekle kendime bir web sitesi yaparak diğer 
                     yapmış olduğum projeleri burada tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
                     projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
@@ -49,7 +51,7 @@
             <img class="app__showcase-image" src="./assets/images/coding.png"/>
         </div>
         <ul class="app__blog-catogories">
-            <a  href="index.html"> <li class="item active">All Projects</li></a>
+            <a  href="index.html"> <li class="item active ilk">Tüm Projeler</li></a>
             <a  href="htmlcss.html"> <li  class="item">Html-Css</li> </a>
             <a  href="php.html">  <li class="item">Php</li></a>
             <a  href="laravel.html"> <li class="item">Laravel</li></a>
