--- a/post_detail.html
+++ b/post_detail.html
@@ -32,7 +32,7 @@
     <div class="app__showcase">
         <div class="app__showcase-info">
             <h1>Blog</h1>
-            <h3>Bu blog..</h3>
+            <h3 class="text">Bu blog..</h3>
             <p> Merhaba ben Muhammet Ali Kayacan. Bilgisayar Mühendisiyim. Her zaman kendisini geliştirmeye dayalı biri olmanın verniş olduğu istekle kendime bir web sitesi yaparak diğer 
                 yapmış olduğum projeleri tanıtmak istedim. Yaptığım bazı projeler incelemeniz için link halinde verilmiştir. Daha çok php backend ile uğraştığım için 
                 projelerimin çoğu öncelikle php dilinde olmakla beraber python ile de yapılmış bir kaç ufak programın detayı yayınlanmıştır. Github üzerinden projelere ulaşabilirsiniz. 
