--- a/store.html
+++ b/store.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link href="./style.css" rel="stylesheet"></link>
     <link href="./pages.css" rel="stylesheet"></link>
+    <link href="./post_detail.css" rel="stylesheet"></link>
 </head>
 <body>
     <nav class="app__header">
