yeni eklemeler yapıldı Mail yapıldı

--- a/hakkimda.html
+++ b/hakkimda.html
@@ -16,6 +16,7 @@
     <nav class="app__header">
         <div class="app_logo">
             <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
+            <img class="app__title2" src="./assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
         </a></div>
@@ -47,31 +48,31 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-sm-4 col-md-3 item">
-                        <h3>Services</h3>
+                        <h3>Ben Kimim</h3>
                         <ul>
-                            <li><a href="#">Web design</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Hosting</a></li>
+                            <li><a href="#">Ben Kimim</a></li>
+                            <li><a href="#">Kariyer</a></li>
+                            <li><a href="#">İletişim</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
-                        <h3>About</h3>
+                        <h3>Hakkımda</h3>
                         <ul>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
-                            <li><a href="#">Legacy</a></li>
+                            <li><a href="#">KayacanSoftware</a></li>
+                            <li><a href="#">Cv</a></li>
+                            <li><a href="#">Yardım</a></li>
                         </ul>
                     </div>
                     <div class="col-sm-4 col-md-3 item">
-                        <h3>Careers</h3>
+                        <h3>Kariyer</h3>
                         <ul>
-                            <li><a href="#">Job openings</a></li>
-                            <li><a href="#">Employee success</a></li>
-                            <li><a href="#">Benefits</a></li>
+                            <li><a href="#">Bigisayar Mühendisi</a></li>
+                            <li><a href="#">Yazılım</a></li>
+                            <li><a href="#">Diller</a></li>
                         </ul>
                     </div>
-                    <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-                        <p class="copyright">Company Name © 2018</p>
+                    <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a>
+                        <p class="copyright">KayacanSoftware © 2023</p>
                     </div>
                 </div>
             </div>
