--- a/iletisim.html
+++ b/iletisim.html
@@ -16,6 +16,7 @@
     <nav class="app__header">
         <div class="app_logo">
             <img class="app__title" src="./assets/images/_Kayacan Software-1.png" />
+            <img class="app__title2" src="./assets/images/ufakKS.png" />
             <a href="https://www.linkedin.com/in/muhammet-ali-kayacan-b35218202/" target="_blank"> 
                 <img class="purple__logo" src="./assets/images/hire_me.svg"/> </a>
         </a></div>
@@ -58,21 +59,21 @@
                   </div>
                   <div class="screen-body-item">
                     <div class="app-form">
-                      <form method="post">
+                      <form method="post" >
                       <div class="app-form-group">
                         <input class="app-form-control" type="text" id="name" placeholder="AD SOYAD"  autocomplete="off">
                       </div>
                       <div class="app-form-group">
-                        <input class="app-form-control"  type="email" id="email" placeholder="EMAİL" autocomplete="off">
+                        <input class="app-form-control"  type="email" name="email_id" id="email_id" placeholder="EMAIL" multiple required>
                       </div>
                       <div class="app-form-group">
-                        <input class="app-form-control" type="no" id="no" placeholder="İLETİŞİM NO" autocomplete="off">
+                        <input class="app-form-control" type="tel" id="no" placeholder="ILETISIM NO" autocomplete="off">
                       </div>
                       <div class="app-form-group">
                         <input class="app-form-control" type="subject" id="subject" placeholder="KONU BAŞLIĞI" autocomplete="off">
                       </div>
                       <div class="app-form-group message">
-                        <textarea class="app-form-control" cols="20"  rows="5" id="message" placeholder="MESAJ"></textarea>
+                        <textarea class="app-form-control" cols="20"  rows="5" id="message" placeholder="MESAJ"  required></textarea>
                       </div>
                       <div class="app-form-group buttons">
                         <button  id="btncancel" class="app-form-button">CANCEL</button>
@@ -93,39 +94,39 @@
 
 
     <div class="footer-clean">
-        <footer>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Services</h3>
-                        <ul>
-                            <li><a href="#">Web design</a></li>
-                            <li><a href="#">Development</a></li>
-                            <li><a href="#">Hosting</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>About</h3>
-                        <ul>
-                            <li><a href="#">Company</a></li>
-                            <li><a href="#">Team</a></li>
-                            <li><a href="#">Legacy</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Careers</h3>
-                        <ul>
-                            <li><a href="#">Job openings</a></li>
-                            <li><a href="#">Employee success</a></li>
-                            <li><a href="#">Benefits</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
-                        <p class="copyright">Company Name © 2018</p>
-                    </div>
+      <footer>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Ben Kimim</h3>
+                    <ul>
+                        <li><a href="#">Ben Kimim</a></li>
+                        <li><a href="#">Kariyer</a></li>
+                        <li><a href="#">İletişim</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Hakkımda</h3>
+                    <ul>
+                        <li><a href="#">KayacanSoftware</a></li>
+                        <li><a href="#">Cv</a></li>
+                        <li><a href="#">Yardım</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-4 col-md-3 item">
+                    <h3>Kariyer</h3>
+                    <ul>
+                        <li><a href="#">Bigisayar Mühendisi</a></li>
+                        <li><a href="#">Yazılım</a></li>
+                        <li><a href="#">Diller</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 item social"> <a href="https://www.instagram.com/muhammet.kycn/?hl=tr" target="_blank"><i class="icon ion-social-instagram"></i></a> <a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a>
+                    <p class="copyright">KayacanSoftware © 2023</p>
                 </div>
             </div>
-        </footer>
+        </div>
+    </footer>
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
